--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,32 @@ body {
     margin: 0 auto;
 }
 
-#container h1
-{
+#post {
+    padding-left: 1em;
+}
+
+#cabecera{
+    background: #33A;
+    color: white;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#container{
+    padding: 0;
+
+}
+
+#container h1{   
+    
     font-size: 20px;
+}
+
+#cabecera #tagline {
+    padding:  0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+
 }
