--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,3 +50,11 @@ body
     background: white;
     padding: 1em;
 }
+
+#footer {
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: center;
+    padding: 0.5em;
+} 
