--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,14 @@ body
     padding: 0;
 }
 
+.team {
+    display: flex;
+    height: fit-content;
+    width: 50%;
+    justify-content: end;
+}
+
+
 #cabecera
 {
     background: #37488b;
@@ -34,7 +42,7 @@ body
 
 #container
 {
-    width: 70%;
+    width: 50%;
     padding: 0;
     text-align: left;
     border: 1px solid #DDD;
@@ -46,9 +54,13 @@ body
     font-size: 20px;
 }
 #post
-{
+{   
     background: white;
     padding: 1em;
+    display: grid;
+    justify-items: center;
+    text-align: justify;
+    width: 96.25%;
 }
 
 #footer {
